--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7"
   }
 }
